# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.120 2005/03/30 00:12:52 agaffney Exp $

*GLI-0.01 (9 Feb 2004)

  29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Remove /tmp/compile_output.log and /var/log/install.log when install is
  complete. Added code to (hopefully) keep 2nd thread running after install.
  Patch from zahna for extra arguments to the kernel. Patch from zahna to add
  get_eth_info() function.

  28 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added 'append_log=True' to all spawn() calls using logfile=. Append to log
  when unpacking tarball.

  28 Mar 2005; Preston Cody <codeman@gentoo.org>
  rewrote filesystem_tools.  looks like it works so ripping out all the old
  filesystem_tools code.
  
  26 Mar 2005; Preston Cody <codeman@gentoo.org>
  Changed the print statements to logging in the partitioning BE code.
  the logger may need to be imported to the x86archtemplate. unknown yet.
  Added the finishing_cleanup function.
  added a fix to the logger from BenUrban
  
  25 Mar 2005; Preston Cody <codeman@gentoo.org>
  changed InstallProfile to remove is_uri check on kernel, stage, and portage
  URIs.  The blank uri check has been commented out.
  ripped out error checking of set_services.  this is done by _add_to_runlevel.
  
  25 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  set_stage_tarball_uri() doesn't raise an exception on a blank string.

  24 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  GRP-ish quickpkg code pulls PKGDIR and PORTAGE_TMPDIR from make.conf info in
  the install profile if available. Commented out spawn() debugging prints

  23 Mar 2005; Preston Cody <codeman@gentoo.org>
  small changes to setup_network_post. moved adding to runlevel of net.x to
  after the device gets symlinked.  added domainname runlevel command.
  
  23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>